--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint . --ext .js,.vue",
-    "lint:fix": "eslint . --ext .js,.vue --fix"
+    "lint:fix": "eslint . --ext .js,.vue --fix",
+    "start": "node .output/server/index.mjs"
   },
   "dependencies": {
     "@nuxt/eslint": "^1.3.0",
     "@nuxt/ui": "^3.0.2",
     "eslint": "^9.24.0",
+    "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.16.2",
     "typescript": "^5.8.3",
     "vue": "^3.5.13",
