--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "@nuxt/eslint": "^1.3.0",
     "@nuxt/ui": "^3.0.2",
+    "@prisma/client": "^6.5.0",
+    "bcrypt": "^5.1.1",
     "eslint": "^9.24.0",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.16.2",
+    "prisma": "^6.5.0",
     "typescript": "^5.8.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
