--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "nuxi": "^3.24.1"
+    "nuxi": "^3.24.1",
+    "tsx": "^4.19.3"
   }
 }
