--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   "dependencies": {
     "@nuxt/eslint": "^1.3.0",
     "@nuxt/ui": "^2.21.1",
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.6.0",
     "bcrypt": "^5.1.1",
     "eslint": "^9.24.0",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.16.2",
-    "prisma": "^6.5.0",
+    "pinia": "^3.0.2",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "slugify": "^1.6.6",
     "typescript": "^5.8.3",
     "vue": "^3.5.13",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "nuxi": "^3.24.1",
+    "prisma": "^6.6.0",
     "tsx": "^4.19.3"
   }
 }
