--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "start": "node .output/server/index.mjs"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.6.0",
     "@nuxt/eslint": "^1.3.0",
     "@nuxt/ui": "^2.21.1",
+    "@pinia/nuxt": "^0.11.0",
     "@prisma/client": "^6.6.0",
     "bcrypt": "^5.1.1",
     "eslint": "^9.24.0",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.16.2",
+    "pinia": "^3.0.2",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "slugify": "^1.6.6",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
