--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@nuxt/ui": "^2.21.1",
     "@pinia/nuxt": "^0.11.0",
     "@prisma/client": "^6.6.0",
+    "@vite-pwa/assets-generator": "^1.0.0",
+    "@vite-pwa/nuxt": "^1.0.0",
     "bcrypt": "^5.1.1",
     "eslint": "^9.24.0",
     "jsonwebtoken": "^9.0.2",
@@ -27,7 +29,9 @@
     "slugify": "^1.6.6",
     "typescript": "^5.8.3",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "workbox-build": "^7.3.0",
+    "workbox-window": "^7.3.0"
   },
   "devDependencies": {
     "nuxi": "^3.24.1",
