--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vite-pwa/nuxt": "^1.0.0",
     "bcrypt": "^5.1.1",
     "eslint": "^9.24.0",
+    "idb": "^8.0.2",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.16.2",
     "pinia": "^3.0.2",
